Clarify message order in Live Stream heading
Added '(latest first)' to the Live Stream heading to make it clear that messages appear in reverse chronological order with the newest at the top.

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
         <div class="card">
             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;">
-                <h2 style="font-size: 1.25rem; color: #2d3748;">Live Stream</h2>
+                <h2 style="font-size: 1.25rem; color: #2d3748;">Live Stream (latest first)</h2>
                 <button class="clear-btn" onclick="clearOutput()">Clear Output</button>
             </div>
             <div id="output" class="output-container">
