Add Server-Sent Events (SSE) data sources
New SSE Sources Added:
✨ Wikimedia EventStreams - Real-time Wikipedia edits with multiple stream types
✨ DexPaprika - Free cryptocurrency DEX prices and multi-chain data
✨ SSE.dev - Test server for SSE development and testing

README Updates:
- Added "Try it live" links with 🟡 indicator for SSE endpoints
- Enhanced Wikimedia entry with additional stream endpoints
- Created new "Cryptocurrency Market Data (SSE)" section
- Added "SSE Testing" section under Development & Testing

HTML Viewer Updates:
- Added 3 new SSE quick examples (Wikipedia, Crypto DEX, SSE Test)
- Examples auto-detect and connect via SSE protocol

All SSE endpoints verified working and require no authentication.

--- a/index.html
+++ b/index.html
@@ -517,6 +517,12 @@
                     <div class="example-link sse" onclick="setUrl('https://stream.wikimedia.org/v2/stream/recentchange', 'sse')">
                         <span class="protocol">SSE</span>Wikipedia Edits
                     </div>
+                    <div class="example-link sse" onclick="setUrl('https://mcp.dexpaprika.com/sse', 'sse')">
+                        <span class="protocol">SSE</span>Crypto DEX Prices
+                    </div>
+                    <div class="example-link sse" onclick="setUrl('https://sse.dev/test', 'sse')">
+                        <span class="protocol">SSE</span>SSE Test Stream
+                    </div>
                 </div>
             </div>
 
