Add new verified SSE endpoints from research
Based on comprehensive multi-agent research across developer platforms,
government sources, regional markets, and monitoring tools:

**New SSE endpoints added:**
- Hacker News (Firebase) - News feed with SSE support via Accept header
- Mastodon SSE endpoints - Alternative to WebSocket for public timelines
- Pushshift Reddit Stream - Real-time Reddit comments/submissions (intermittent)

**Updated existing entries:**
- Enhanced Hacker News description to mention SSE support
- Added Mastodon SSE alternative alongside WebSocket
- Updated HTML viewer quick examples (replaced Test Stream with Hacker News)

**Research findings:**
- Most platforms (GitHub, Slack, Discord, Stripe) use webhooks/WebSockets
- Government APIs (NASA, NOAA, CDC) remain REST-only
- SSE adoption growing in AI/LLM streaming but rare in public data APIs
- Wikimedia remains the gold standard for public SSE infrastructure

--- a/index.html
+++ b/index.html
@@ -483,8 +483,8 @@
                     <div class="example-link sse" onclick="setUrl('https://mcp.dexpaprika.com/sse', 'sse')">
                         <span class="protocol">SSE</span>Crypto DEX
                     </div>
-                    <div class="example-link sse" onclick="setUrl('https://sse.dev/test', 'sse')">
-                        <span class="protocol">SSE</span>Test Stream
+                    <div class="example-link sse" onclick="setUrl('https://hacker-news.firebaseio.com/v0/topstories.json', 'sse')">
+                        <span class="protocol">SSE</span>Hacker News
                     </div>
                 </div>
             </div>
