Replace slow quick examples with high-frequency streams
Removed:
- Bitcoin TX (slow/intermittent)
- SSL Certs (slow)
- Crypto DEX SSE (slow/not working)
- Hacker News SSE (slow updates)

Added:
- Binance ETH trades (high frequency)
- Coinbase feed (high frequency)
- Mastodon public timeline (active social feed)
- Wiki Page Create (SSE, steady stream)

All new examples send data quickly for better demo experience.

--- a/index.html
+++ b/index.html
@@ -471,20 +471,20 @@
                     <div class="example-link" onclick="setUrl('wss://stream.binance.com:9443/ws/btcusdt@trade', 'ws')">
                         <span class="protocol">WSS</span>Binance BTC
                     </div>
-                    <div class="example-link" onclick="setUrl('wss://ws.blockchain.info/inv', 'ws')">
-                        <span class="protocol">WSS</span>Bitcoin TX
+                    <div class="example-link" onclick="setUrl('wss://stream.binance.com:9443/ws/ethusdt@trade', 'ws')">
+                        <span class="protocol">WSS</span>Binance ETH
                     </div>
-                    <div class="example-link" onclick="setUrl('wss://certstream.calidog.io', 'ws')">
-                        <span class="protocol">WSS</span>SSL Certs
+                    <div class="example-link" onclick="setUrl('wss://ws-feed.exchange.coinbase.com', 'ws')">
+                        <span class="protocol">WSS</span>Coinbase
                     </div>
                     <div class="example-link sse" onclick="setUrl('https://stream.wikimedia.org/v2/stream/recentchange', 'sse')">
                         <span class="protocol">SSE</span>Wikipedia
                     </div>
-                    <div class="example-link sse" onclick="setUrl('https://mcp.dexpaprika.com/sse', 'sse')">
-                        <span class="protocol">SSE</span>Crypto DEX
+                    <div class="example-link sse" onclick="setUrl('https://stream.wikimedia.org/v2/stream/page-create', 'sse')">
+                        <span class="protocol">SSE</span>Wiki Pages
                     </div>
-                    <div class="example-link sse" onclick="setUrl('https://hacker-news.firebaseio.com/v0/topstories.json', 'sse')">
-                        <span class="protocol">SSE</span>Hacker News
+                    <div class="example-link" onclick="setUrl('wss://mastodon.social/api/v1/streaming/public', 'ws')">
+                        <span class="protocol">WSS</span>Mastodon
                     </div>
                 </div>
             </div>
