--- a/index.html
+++ b/index.html
@@ -32,6 +32,26 @@
             margin-bottom: 1.5rem;
         }
 
+        .top-card {
+            background: white;
+            border-radius: 0;
+            padding: 2rem;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            margin: -2rem -2rem 1.5rem -2rem;
+            width: 100vw;
+            position: relative;
+            left: 50%;
+            right: 50%;
+            margin-left: -50vw;
+            margin-right: -50vw;
+        }
+
+        .top-card-content {
+            max-width: 1400px;
+            margin: 0 auto;
+            padding: 0 2rem;
+        }
+
         .input-group {
             display: flex;
             gap: 1rem;
@@ -467,21 +487,22 @@
 </head>
 <body>
     <div class="container">
-        <div class="card">
-            <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem; gap: 1rem; flex-wrap: wrap;">
-                <div>
-                    <h1 style="font-size: 1.75rem; margin: 0; color: #2d3748;">🌐 WebSocket & SSE Stream Viewer</h1>
-                    <p style="margin: 0.25rem 0 0 0; color: #718096; font-size: 0.95rem;">Connect to any real-time data stream instantly</p>
+        <div class="top-card">
+            <div class="top-card-content">
+                <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem; gap: 1rem; flex-wrap: wrap;">
+                    <div>
+                        <h1 style="font-size: 1.75rem; margin: 0; color: #2d3748;">🌐 WebSocket & SSE Stream Viewer</h1>
+                        <p style="margin: 0.25rem 0 0 0; color: #718096; font-size: 0.95rem;">Connect to any real-time data stream instantly</p>
+                    </div>
+                    <a href="https://github.com/conduktor/public-streaming-api" target="_blank" rel="noopener" style="display: flex; align-items: center; gap: 0.5rem; padding: 0.5rem 1rem; background: #2d3748; color: white; text-decoration: none; border-radius: 6px; font-size: 0.875rem; transition: background 0.2s;">
+                        <svg width="20" height="20" viewBox="0 0 16 16" fill="currentColor">
+                            <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"/>
+                        </svg>
+                        GitHub
+                    </a>
                 </div>
-                <a href="https://github.com/conduktor/public-streaming-api" target="_blank" rel="noopener" style="display: flex; align-items: center; gap: 0.5rem; padding: 0.5rem 1rem; background: #2d3748; color: white; text-decoration: none; border-radius: 6px; font-size: 0.875rem; transition: background 0.2s;">
-                    <svg width="20" height="20" viewBox="0 0 16 16" fill="currentColor">
-                        <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"/>
-                    </svg>
-                    GitHub
-                </a>
-            </div>
 
-            <div class="input-group">
+                <div class="input-group">
                 <div class="input-wrapper">
                     <input
                         type="text"
@@ -554,6 +575,7 @@
                         <div class="stat-value" id="protocolStat">-</div>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
 
