Fix syntax error in updateCodeSnippets function
Changed 'else' to 'else if (type === "sse")' to properly handle
three protocol types (ws, sse, http) instead of causing syntax error.

Error was: Unexpected token 'else' due to nested else blocks.

--- a/index.html
+++ b/index.html
@@ -1353,7 +1353,7 @@ websocat '${escapedUrl}'
 # or
 wscat -c '${escapedUrl}'`;
 
-            } else {
+            } else if (type === 'sse') {
                 // Python SSE
                 document.getElementById('pythonSnippet').textContent =
 `import requests
